# neomower

./: .gitignore  README.md
mower_ws/: rebuild.sh
mower_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mower_ws/install/mower_bringup/share/mower_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
mower_ws/install/mower_control/lib/mower_control/: mower_controller
mower_ws/install/mower_control/share/mower_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
mower_ws/install/mower_description/share/mower_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
mower_ws/install/mower_interfaces/share/mower_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  (+4 more)
mower_ws/log/: latest_build
mower_ws/src/mower_bringup/: CMakeLists.txt
mower_ws/src/mower_bringup/launch/: all.launch.py
mower_ws/src/mower_control/: package.xml  setup.cfg  setup.py
mower_ws/src/mower_control/mower_control/: mower_controller.py
mower_ws/src/mower_description/: CMakeLists.txt  package.xml
mower_ws/src/mower_description/launch/: mower.launch.py
mower_ws/src/mower_description/urdf/: mower.urdf
mower_ws/src/mower_interfaces/: CMakeLists.txt  package.xml
mower_ws/src/mower_sim/: CMakeLists.txt
mower_ws/src/mower_sim/launch/: sim.launch.py
mower_ws/src/mower_sim/worlds/: lawn.world
(+39 files in other folders)
