<?xml version="1.0"?>
<package format="3">
  <name>mower_interfaces</name>
  <version>0.1.0</version>
  <description>Custom messages for mower</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
